--- a/client/package.json
+++ b/client/package.json
@@ -12,11 +12,25 @@
   "keywords": [],
   "author": "",
   "dependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  },
+  "devDependencies": {
+    "style-loader": "^3.0.0",
+    "ts-loader": "^9.2.4",
+    "webpack-cli": "4.7.2",
+    "@types/react": "17.0.16",
+    "@types/react-dom": "17.0.9",
+    "typescript": "4.3.5",
+    "webpack": "5.44.0",
+    "webpack-dev-server": "3.11.2",
+    "webpack-merge": "5.8.0",
     "@babel/cli": "^7.14.5",
     "@babel/core": "^7.14.6",
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.14.5",
+    "@types/react-router-dom": "^5.1.8",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "css-loader": "^5.2.6",
@@ -24,20 +38,6 @@
     "dotenv": "^10.0.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
-    "mini-css-extract-plugin": "^1.6.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "style-loader": "^3.0.0",
-    "ts-loader": "^9.2.4",
-    "typescript": "^4.3.5",
-    "webpack-cli": "^4.7.2"
-  },
-  "devDependencies": {
-    "@types/react": "^17.0.16",
-    "@types/react-dom": "^17.0.9",
-    "typescript": "^4.3.5",
-    "webpack": "5.44.0",
-    "webpack-dev-server": "3.11.2",
-    "webpack-merge": "^5.8.0"
+    "mini-css-extract-plugin": "^1.6.0"
   }
 }
