--- a/frontend/client/package.json
+++ b/frontend/client/package.json
@@ -7,11 +7,15 @@
     "dev": "webpack serve --config webpack.dev.js --progress",
     "build": "webpack --mode production",
     "prestart": "npm build",
-    "start": "webpack --mode development"
+    "start": "npm run dev",
+    "test": "jest",
+    "test:coverage": "jest --converage"
   },
   "keywords": [],
   "author": "",
   "dependencies": {
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
@@ -20,22 +24,15 @@
     "styled-normalize": "^8.0.7"
   },
   "devDependencies": {
-    "@types/styled-components": "^5.1.12",
-    "style-loader": "^3.0.0",
-    "ts-loader": "^9.2.4",
-    "webpack-cli": "4.7.2",
-    "@types/react": "17.0.16",
-    "@types/react-dom": "17.0.9",
-    "typescript": "4.3.5",
-    "webpack": "5.44.0",
-    "webpack-dev-server": "3.11.2",
-    "webpack-merge": "5.8.0",
     "@babel/cli": "^7.14.5",
     "@babel/core": "^7.14.6",
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.14.5",
+    "@types/react": "17.0.16",
+    "@types/react-dom": "17.0.9",
     "@types/react-router-dom": "^5.1.8",
+    "@types/styled-components": "^5.1.12",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "css-loader": "^5.2.6",
@@ -43,6 +40,15 @@
     "dotenv": "^10.0.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
-    "mini-css-extract-plugin": "^1.6.0"
+    "jest": "^27.0.6",
+    "mini-css-extract-plugin": "^1.6.0",
+    "style-loader": "^3.0.0",
+    "ts-jest": "^27.0.4",
+    "ts-loader": "^9.2.4",
+    "typescript": "4.3.5",
+    "webpack": "5.44.0",
+    "webpack-cli": "4.7.2",
+    "webpack-dev-server": "3.11.2",
+    "webpack-merge": "5.8.0"
   }
 }
