fix: ignore coverage 폴더 깃 ignore에 추가

--- a/frontend/client/package.json
+++ b/frontend/client/package.json
@@ -9,7 +9,7 @@
     "prestart": "npm build",
     "start": "npm run dev",
     "test": "jest",
-    "test:coverage": "jest --converage"
+    "test:coverage": "jest --coverage"
   },
   "keywords": [],
   "author": "",
