--- a/backend/package.json
+++ b/backend/package.json
@@ -9,11 +9,12 @@
       "typescript": "3.3.3333"
    },
    "dependencies": {
-      "typeorm": "0.2.36",
+      "dotenv": "^10.0.0",
+      "mysql": "^2.14.1",
       "reflect-metadata": "^0.1.10",
-      "mysql": "^2.14.1"
+      "typeorm": "0.2.36"
    },
    "scripts": {
-      "start": "ts-node src/index.ts"
+      "start": "ts-node src/server.ts"
    }
 }
