add: client 절대 경로 설정

--- a/frontend/client/tsconfig.json
+++ b/frontend/client/tsconfig.json
@@ -82,8 +82,12 @@
     "allowSyntheticDefaultImports": true,
     "baseUrl": "./",
     "outDir": "./dist",
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "paths": {
+      "src": ["src/*"]
+    }
   },
+
   "exclude": ["node_modules"],
   "include": ["**/*.ts", "**/*.tsx"]
 }
