--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,7 @@
    },
    "dependencies": {
       "dotenv": "^10.0.0",
-      "mysql": "^2.14.1",
+      "mysql2": "^2.3.0",
       "reflect-metadata": "^0.1.10",
       "typeorm": "0.2.36"
    },
