--- a/frontend/client/package.json
+++ b/frontend/client/package.json
@@ -22,13 +22,14 @@
     "styled-normalize": "8.0.7"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "5.14.1",
-    "@testing-library/react": "12.0.0",
     "@babel/cli": "7.14.5",
     "@babel/core": "7.14.6",
     "@babel/preset-env": "7.14.7",
     "@babel/preset-react": "7.14.5",
     "@babel/preset-typescript": "7.14.5",
+    "@testing-library/jest-dom": "5.14.1",
+    "@testing-library/react": "12.0.0",
+    "@types/jest": "^27.0.0",
     "@types/react": "17.0.16",
     "@types/react-dom": "17.0.9",
     "@types/react-router-dom": "5.1.8",
