--- a/frontend/client/package.json
+++ b/frontend/client/package.json
@@ -19,7 +19,8 @@
     "react-icons": "4.2.0",
     "recoil": "0.4.0",
     "styled-components": "5.3.0",
-    "styled-normalize": "8.0.7"
+    "styled-normalize": "8.0.7",
+    "styled-reset": "^4.3.4"
   },
   "devDependencies": {
     "@babel/cli": "7.14.5",
