fix: import path alias (src => @src) 수정

--- a/frontend/client/tsconfig.json
+++ b/frontend/client/tsconfig.json
@@ -84,7 +84,7 @@
     "outDir": "./dist",
     "moduleResolution": "node",
     "paths": {
-      "src": ["src/*"]
+      "@src/*": ["src/*"]
     }
   },
 
