--- a/frontend/client/package.json
+++ b/frontend/client/package.json
@@ -14,15 +14,16 @@
   "keywords": [],
   "author": "",
   "dependencies": {
+    "file-loader": "^6.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "4.2.0",
+    "react-slick": "^0.28.1",
     "recoil": "0.4.0",
+    "slick-carousel": "1.8.1",
     "styled-components": "5.3.0",
     "styled-normalize": "8.0.7",
-    "styled-reset": "4.3.4",
-    "react-slick": "^0.28.1",
-    "slick-carousel": "1.8.1"
+    "styled-reset": "4.3.4"
   },
   "devDependencies": {
     "@babel/cli": "7.14.5",
