--- a/backend/package.json
+++ b/backend/package.json
@@ -4,11 +4,10 @@
   "description": "",
   "main": "index.js",
   "devDependencies": {
-    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
     "@types/node": "^8.0.29",
-    "ts-node": "3.3.0",
+    "ts-node": "^3.3.0",
     "typescript": "3.3.3333"
   },
   "dependencies": {
@@ -17,11 +16,13 @@
     "reflect-metadata": "^0.1.10",
     "typeorm": "0.2.36",
     "axios": "^0.21.1",
+    "@types/cors": "^2.8.12",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.2"
   },
   "scripts": {
-    "start": "ts-node src/server.ts"
+    "start": "ts-node src/server.ts",
+    "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/server.ts"
   }
 }
