add: 회원 관련 API 생성 및 환경변수 설정

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,3 +6,8 @@ DATABASE_PASSWORD=
 
 OAUTH_GITHUB_TOKEN_URL=
 OAUTH_GITHUB_PROFILE_URL=
+
+SERVER_PORT=
+ORIGIN_URL=
+SESSION_SECRET=
+COOKIE_DOMAIN=
