--- a/frontend/client/package.json
+++ b/frontend/client/package.json
@@ -43,7 +43,7 @@
     "clean-webpack-plugin": "4.0.0-alpha.0",
     "css-loader": "5.2.6",
     "css-minimizer-webpack-plugin": "3.0.2",
-    "dotenv": "10.0.0",
+    "dotenv": "^10.0.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "5.3.2",
     "jest": "27.0.6",
