add: 자동 배포를 위한  deploy & build gitaction 스크립트 추가

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,5 +4,5 @@ DATABASE_PORT=
 DATABASE_USERNAME=
 DATABASE_PASSWORD=
 
-GITHUB_TOKEN_URL=
-GITHUB_PROFILE_URL=
+OAUTH_GITHUB_TOKEN_URL=
+OAUTH_GITHUB_PROFILE_URL=
