--- a/backend/package.json
+++ b/backend/package.json
@@ -4,25 +4,29 @@
   "description": "",
   "main": "index.js",
   "devDependencies": {
-    "@types/express": "^4.17.13",
-    "@types/express-session": "^1.17.4",
-    "@types/node": "^8.0.29",
-    "@types/cors": "^2.8.12",
-    "ts-node": "^3.3.0",
-    "typescript": "3.3.3333"
+    "@types/cors": "2.8.12",
+    "@types/express": "4.17.13",
+    "@types/express-session": "1.17.4",
+    "@types/node": "8.0.29",
+    "ts-loader": "9.2.5",
+    "ts-node": "3.3.0",
+    "typescript": "4.3.5",
+    "webpack": "5.50.0",
+    "webpack-cli": "4.7.2"
   },
   "dependencies": {
-    "dotenv": "^10.0.0",
-    "mysql2": "^2.3.0",
-    "reflect-metadata": "^0.1.10",
+    "dotenv": "10.0.0",
+    "mysql2": "2.3.0",
+    "reflect-metadata": "0.1.10",
     "typeorm": "0.2.36",
-    "axios": "^0.21.1",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "express-session": "^1.17.2"
+    "axios": "0.21.1",
+    "cors": "2.8.5",
+    "express": "4.17.1",
+    "express-session": "1.17.2"
   },
   "scripts": {
     "start": "ts-node src/server.ts",
-    "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/server.ts"
+    "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/server.ts",
+    "build": "webpack --config ./webpack.config.js"
   }
 }
