fix: 배포 그룹 이름 수정

--- a/.github/workflows/deploy-actions.yaml
+++ b/.github/workflows/deploy-actions.yaml
@@ -67,4 +67,4 @@ jobs:
             ./$GITHUB_SHA.tgz s3://store-5-bucket/$PROJECT_NAME/$GITHUB_SHA.tgz
 
       - name: Code Deploy
-        run: aws deploy create-deployment --application-name store-5 --file-exists-behavior OVERWRITE --deployment-config-name CodeDeployDefault.OneAtATime --deployment-group-name store-5-deploy-group --s3-location bucket=store-5-bucket,bundleType=tgz,key=$PROJECT_NAME/$GITHUB_SHA.tgz
+        run: aws deploy create-deployment --application-name store-5 --file-exists-behavior OVERWRITE --deployment-config-name CodeDeployDefault.OneAtATime --deployment-group-name store-5-group --s3-location bucket=store-5-bucket,bundleType=tgz,key=$PROJECT_NAME/$GITHUB_SHA.tgz
