--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "devDependencies": {
     "@types/cors": "2.8.12",
     "@types/express": "4.17.13",
-    "@types/express-session": "1.17.4",
+    "@types/express-session": "^1.17.4",
     "@types/node": "8.0.29",
     "ts-loader": "9.2.5",
     "ts-node": "3.3.0",
