update: tsconfig  strictPropertyInitialization 추가
- 각 Entity의 !를 제거하기 위함!
지호님 발견 :)

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -11,7 +11,8 @@
     "forceConsistentCasingInFileNames": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "sourceMap": true
+    "sourceMap": true,
+    "strictPropertyInitialization": false
     // "typeRoots": ["./node_modules/@types", "./src/types/request", "./src/types/response", "./src/types"]
   }
 }
