--- a/backend/package.json
+++ b/backend/package.json
@@ -15,14 +15,15 @@
     "webpack-cli": "4.7.2"
   },
   "dependencies": {
+    "axios": "0.21.1",
+    "cors": "2.8.5",
     "dotenv": "10.0.0",
+    "express": "4.17.1",
+    "express-session": "1.17.2",
     "mysql2": "2.3.0",
     "reflect-metadata": "0.1.10",
     "typeorm": "0.2.36",
-    "axios": "0.21.1",
-    "cors": "2.8.5",
-    "express": "4.17.1",
-    "express-session": "1.17.2"
+    "typeorm-naming-strategies": "^2.0.0"
   },
   "scripts": {
     "start": "ts-node src/server.ts",
