--- a/frontend/client/package.json
+++ b/frontend/client/package.json
@@ -48,6 +48,7 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "5.3.2",
     "jest": "27.0.6",
+    "jest-styled-components": "^7.0.5",
     "jest-transform-css": "^2.1.0",
     "mini-css-extract-plugin": "1.6.0",
     "style-loader": "3.0.0",
