--- a/backend/package.json
+++ b/backend/package.json
@@ -27,7 +27,7 @@
   },
   "scripts": {
     "start": "ts-node src/server.ts",
-    "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/server.ts",
+    "dev": "nodemon --watch 'src/**/*.ts' --exec ts-node src/server.ts",
     "build": "webpack --config ./webpack.config.js"
   }
 }
