--- a/frontend/admin/tsconfig.json
+++ b/frontend/admin/tsconfig.json
@@ -78,12 +78,16 @@
     "esModuleInterop": true,
     "module": "commonjs",
     "isolatedModules": true,
-    "jsx": "preserve",
+    "jsx": "react", // Babel에서 처리하지 않고 Typescript 수준에서 JSX를 React Element로 변환하도록 수정.(Jest 설정을 위해)
     "allowSyntheticDefaultImports": true,
     "baseUrl": "./",
     "outDir": "./dist",
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "paths": {
+      "@src/*": ["src/*"]
+    }
   },
+
   "exclude": ["node_modules"],
   "include": ["**/*.ts", "**/*.tsx"]
 }
