add: admin 앱 배포환경 설정

--- a/.github/workflows/deploy-actions.yaml
+++ b/.github/workflows/deploy-actions.yaml
@@ -35,6 +35,16 @@ jobs:
         run: npm run build
         working-directory: ./frontend/client
 
+      - name: Install Dependency in Admin App
+        run: |
+          npm install
+        working-directory: ./frontend/admin
+
+      - name: Build Dependency in Admin App
+        run: |
+          npm run build
+        working-directory: ./frontend/admin
+
       - name: Install Dependency in Server
         run: npm install
         working-directory: ./backend
@@ -47,6 +57,7 @@ jobs:
         run: |
           mkdir -p public
           cp -r ../frontend/client/dist/* ./public/
+          cp -r ../frontend/admin/dist/*  ./public/a
         working-directory: ./backend
 
       - name: Create .env file for server app
