--- a/backend/package.json
+++ b/backend/package.json
@@ -6,15 +6,16 @@
   "devDependencies": {
     "@types/cors": "2.8.12",
     "@types/express": "4.17.13",
-    "@types/express-session": "^1.17.4",
+    "@types/express-session": "1.17.4",
     "@types/node": "8.0.29",
     "ts-loader": "9.2.5",
     "ts-node": "3.3.0",
     "typescript": "4.3.5",
     "webpack": "5.50.0",
     "webpack-cli": "4.7.2",
-    "@types/multer": "^1.4.7",
-    "@types/multer-s3": "^2.7.10"
+    "@types/multer": "1.4.7",
+    "@types/multer-s3": "2.7.10",
+    "@types/morgan": "1.9.3"
   },
   "dependencies": {
     "axios": "0.21.1",
@@ -22,11 +23,12 @@
     "dotenv": "10.0.0",
     "express": "4.17.1",
     "express-session": "1.17.2",
-    "multer": "^1.4.3",
+    "morgan": "1.10.0",
+    "multer": "1.4.3",
     "mysql2": "2.3.0",
     "reflect-metadata": "0.1.10",
     "typeorm": "0.2.36",
-    "typeorm-naming-strategies": "^2.0.0"
+    "typeorm-naming-strategies": "2.0.0"
   },
   "scripts": {
     "start": "ts-node src/server.ts",
