--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "@types/morgan": "1.9.3"
   },
   "dependencies": {
+    "aws-sdk": "^2.973.0",
     "axios": "0.21.1",
     "cors": "2.8.5",
     "dotenv": "10.0.0",
