--- a/frontend/admin/package.json
+++ b/frontend/admin/package.json
@@ -14,12 +14,12 @@
   "keywords": [],
   "author": "",
   "dependencies": {
-    "file-loader": "^6.2.0",
-    "fork-ts-checker-webpack-plugin": "^6.3.2",
+    "file-loader": "6.2.0",
+    "fork-ts-checker-webpack-plugin": "6.3.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "4.2.0",
-    "react-slick": "^0.28.1",
+    "react-slick": "0.28.1",
     "recoil": "0.4.0",
     "slick-carousel": "1.8.1",
     "styled-components": "5.3.0",
@@ -44,12 +44,12 @@
     "clean-webpack-plugin": "4.0.0-alpha.0",
     "css-loader": "5.2.6",
     "css-minimizer-webpack-plugin": "3.0.2",
-    "dotenv": "^10.0.0",
-    "file-loader": "^6.2.0",
+    "dotenv": "10.0.0",
+    "file-loader": "6.2.0",
     "html-webpack-plugin": "5.3.2",
     "jest": "27.0.6",
-    "jest-styled-components": "^7.0.5",
-    "jest-transform-css": "^2.1.0",
+    "jest-styled-components": "7.0.5",
+    "jest-transform-css": "2.1.0",
     "mini-css-extract-plugin": "1.6.0",
     "style-loader": "3.0.0",
     "ts-jest": "27.0.4",
