--- a/backend/.env.example
+++ b/backend/.env.example
@@ -11,3 +11,9 @@ SERVER_PORT=
 ORIGIN_URL=
 SESSION_SECRET=
 COOKIE_DOMAIN=
+
+AWS_S3_BUCKET_NAME=
+AWS_S3_ACCESS_KEY_ID=
+AWS_S3_SECRET_ACCESS_KEY=
+AWS_S3_REGION=
+AWS_S3_UPLOAD_FILE_URL=
