--- a/frontend/admin/package.json
+++ b/frontend/admin/package.json
@@ -21,6 +21,7 @@
     "react-icons": "4.2.0",
     "react-slick": "0.28.1",
     "recoil": "0.4.0",
+    "styled-components": "5.3.0",
     "slick-carousel": "1.8.1"
   },
   "devDependencies": {
