--- a/frontend/admin/package.json
+++ b/frontend/admin/package.json
@@ -20,9 +20,10 @@
     "react-dom": "17.0.2",
     "react-icons": "4.2.0",
     "react-slick": "0.28.1",
+    "recharts": "^2.1.1",
     "recoil": "0.4.0",
-    "styled-components": "5.3.0",
-    "slick-carousel": "1.8.1"
+    "slick-carousel": "1.8.1",
+    "styled-components": "5.3.0"
   },
   "devDependencies": {
     "@babel/cli": "7.14.5",
