--- a/frontend/admin/package.json
+++ b/frontend/admin/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "webpack serve --config webpack.dev.js --progress",
     "build": "webpack --config webpack.prod.js",
+    "build:dev": "webpack --config webpack.dev.js",
     "prestart": "npm build",
     "start": "npm run dev",
     "test": "jest",
@@ -56,7 +57,7 @@
     "typescript": "4.3.5",
     "url-loader": "4.1.1",
     "webpack": "5.44.0",
-    "webpack-cli": "4.7.2",
+    "webpack-cli": "^4.7.2",
     "webpack-dev-server": "3.11.2",
     "webpack-merge": "5.8.0"
   }
