--- a/frontend/client/package.json
+++ b/frontend/client/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "webpack serve --config webpack.dev.js --progress",
     "build": "webpack --config webpack.prod.js",
+    "build:dev": "webpack --config webpack.dev.js",
     "prestart": "npm build",
     "start": "npm run dev",
     "test": "jest",
@@ -14,8 +15,6 @@
   "keywords": [],
   "author": "",
   "dependencies": {
-    "file-loader": "^6.2.0",
-    "fork-ts-checker-webpack-plugin": "^6.3.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "4.2.0",
@@ -45,7 +44,6 @@
     "css-loader": "5.2.6",
     "css-minimizer-webpack-plugin": "3.0.2",
     "dotenv": "^10.0.0",
-    "file-loader": "^6.2.0",
     "html-webpack-plugin": "5.3.2",
     "jest": "27.0.6",
     "jest-styled-components": "^7.0.5",
@@ -59,6 +57,9 @@
     "webpack": "5.44.0",
     "webpack-cli": "4.7.2",
     "webpack-dev-server": "3.11.2",
-    "webpack-merge": "5.8.0"
+    "webpack-merge": "5.8.0",
+    "fork-ts-checker-webpack-plugin": "^6.3.2",
+    "webpack-bundle-analyzer": "^4.4.2",
+    "file-loader": "^6.2.0"
   }
 }
