--- a/frontend/admin/package.json
+++ b/frontend/admin/package.json
@@ -15,11 +15,11 @@
   "keywords": [],
   "author": "",
   "dependencies": {
+    "@react-icons/all-files": "^4.1.0",
     "file-loader": "6.2.0",
     "fork-ts-checker-webpack-plugin": "6.3.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "4.2.0",
     "react-slick": "0.28.1",
     "recharts": "^2.1.1",
     "recoil": "0.4.0",
