--- a/frontend/client/package.json
+++ b/frontend/client/package.json
@@ -15,9 +15,9 @@
   "keywords": [],
   "author": "",
   "dependencies": {
+    "@react-icons/all-files": "4.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "4.2.0",
     "react-slick": "^0.28.1",
     "recoil": "0.4.0",
     "slick-carousel": "1.8.1",
