--- a/frontend/admin/package.json
+++ b/frontend/admin/package.json
@@ -7,7 +7,6 @@
     "dev": "webpack serve --config webpack.dev.js --progress",
     "build": "webpack --config webpack.prod.js",
     "build:dev": "webpack --config webpack.dev.js",
-    "prestart": "npm build",
     "start": "npm run dev",
     "test": "jest",
     "test:coverage": "jest --coverage"
@@ -15,13 +14,13 @@
   "keywords": [],
   "author": "",
   "dependencies": {
-    "@react-icons/all-files": "^4.1.0",
+    "@react-icons/all-files": "4.1.0",
     "file-loader": "6.2.0",
     "fork-ts-checker-webpack-plugin": "6.3.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-slick": "0.28.1",
-    "recharts": "^2.1.1",
+    "recharts": "2.1.1",
     "recoil": "0.4.0",
     "slick-carousel": "1.8.1",
     "styled-components": "5.3.0"
@@ -34,7 +33,7 @@
     "@babel/preset-typescript": "7.14.5",
     "@testing-library/jest-dom": "5.14.1",
     "@testing-library/react": "12.0.0",
-    "@types/jest": "^27.0.0",
+    "@types/jest": "27.0.0",
     "@types/react": "17.0.16",
     "@types/react-dom": "17.0.9",
     "@types/react-router-dom": "5.1.8",
@@ -57,7 +56,7 @@
     "typescript": "4.3.5",
     "url-loader": "4.1.1",
     "webpack": "5.44.0",
-    "webpack-cli": "^4.7.2",
+    "webpack-cli": "4.7.2",
     "webpack-dev-server": "3.11.2",
     "webpack-merge": "5.8.0"
   }
