--- a/frontend/client/package.json
+++ b/frontend/client/package.json
@@ -59,6 +59,6 @@
     "webpack-merge": "5.8.0",
     "fork-ts-checker-webpack-plugin": "6.3.2",
     "webpack-bundle-analyzer": "4.4.2",
-    "file-loader": "^6.2.0"
+    "file-loader": "6.2.0"
   }
 }
