--- a/frontend/client/package.json
+++ b/frontend/client/package.json
@@ -22,7 +22,8 @@
     "slick-carousel": "1.8.1",
     "styled-components": "5.3.0",
     "styled-normalize": "8.0.7",
-    "styled-reset": "4.3.4"
+    "styled-reset": "4.3.4",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "@babel/cli": "7.14.5",
@@ -59,6 +60,7 @@
     "webpack-merge": "5.8.0",
     "fork-ts-checker-webpack-plugin": "6.3.2",
     "webpack-bundle-analyzer": "4.4.2",
-    "file-loader": "6.2.0"
+    "file-loader": "6.2.0",
+    "@types/react-helmet": "^6.1.2"
   }
 }
